# GCfix_Software

./: .gitignore  single_sample_GC_count.py
.github/workflows/: rust.yml
gcfix/: Cargo.toml  fg_rust.sh  t.ipynb  test_gccount.sh  test_pygccount.sh
gcfix/benches/: bench.rs
gcfix/src/: core.rs
